# hardware_proto_manager

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh
.github/workflows/: docs.yml
docs/: Doxyfile  create_virtual_port.md  generate.sh  python_script_usage.md
inc/: main.hpp
inc/devices/: BootloaderDevice.hpp  IDevice.hpp  LedControllerDevice.hpp  TestDevice.hpp
inc/messages/: Message.hpp  MessageTypes.hpp
inc/protocols/: IProtocolAdapter.hpp  JsonProtocolAdapter.hpp  PlainProtocol.hpp  PlainProtocolAdapter.hpp  ShiftProtocol.hpp
inc/transport/: ITransport.hpp  RealUartTransport.hpp  SimulatedUartTransport.hpp  TransportTypes.hpp  UartTransport.hpp
scripts/: uart_com.py
src/: main.cpp
src/devices/: BootloaderDevice.cpp  IDevice.cpp  LedControllerDevice.cpp  TestDevice.cpp
src/protocols/: IProtocolAdapter.cpp  PlainProtocol.cpp  PlainProtocolAdapter.cpp  ShiftProtocol.cpp
src/transport/: ITransport.cpp  RealUartTransport.cpp  TransportTypes.cpp  UartTransport.cpp
